--- a/src/resources/languages/English.properties
+++ b/src/resources/languages/English.properties
@@ -59,7 +59,7 @@ For = for
 If = if
 IfElse = ifelse
 MakeUserInstruction = to
-treenode.BracketNode = [|]
+BracketNode = [|]
 #
 # Display Commands
 #
