working stamp and clearstamp nodes

--- a/src/resources/languages/English.properties
+++ b/src/resources/languages/English.properties
@@ -14,6 +14,8 @@ ShowTurtle = showturtle|st
 HideTurtle = hideturtle|ht
 Home = home
 ClearScreen = clearscreen|cs
+Stamp = stamp
+ClearStamp = clearstamp
 #
 # Turtle Queries
 #
